--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,7 +41,7 @@ jobs:
         os: [ ubuntu-22.04, ubuntu-24.04, ubuntu-24.04-arm,
               macos-14, macos-15, macos-15-intel, macos-26,
               windows-2022 ]
-        ruby: [ '3.0', 3.1, 3.2, 3.3, 3.4, head ]
+        ruby: [ '3.0', 3.1, 3.2, 3.3, 3.4, '4.0', head ]
         no-ssl: ['']
         rack-v: ['']
         yjit: ['']
@@ -72,6 +72,7 @@ jobs:
           - { os: macos-26        , ruby:  3.2  }
           - { os: macos-26        , ruby:  head }
           - { os: windows-2025    , ruby:  head }
+          - { os: windows-2022    , ruby:  '4.0' }
 
     steps:
       - name: repo checkout
